Finished part 3 of tutorial, added paths for questions based on id, and added polls page to menu

--- a/mysite/resume/templates/home.html
+++ b/mysite/resume/templates/home.html
@@ -4,7 +4,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <pre><a href = "{% url 'index' %}">Home Page</a>      <a href = "{% url 'resume' %}">Resume Page</a></pre>
+    <pre><a href = "{% url 'index' %}">Home Page</a>      <a href = "{% url 'resume' %}">Resume Page</a>      <a href = "{% url 'poll_index' %}">Polls Page</a></pre>
     <center><h1> Home Page </h1></center>
 
 
