--- a/mysite/resume/templates/resume.html
+++ b/mysite/resume/templates/resume.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <pre><a href = "{% url 'index' %}">Home Page</a>      <a href = "{% url 'resume' %}">Resume Page</a></pre>
+    <pre><a href = "{% url 'index' %}">Home Page</a>      <a href = "{% url 'resume' %}">Resume Page</a>      <a href = "{% url 'poll_index' %}">Polls Page</a></pre>
     <center><h1> Resume Page </h1></center>
 
 </body>
