--- a/mysite/resume/templates/home.html
+++ b/mysite/resume/templates/home.html
@@ -9,9 +9,15 @@
 
 <body>
   <div class="menu-container">
-    <a href = "{% url 'index' %}">Home Page</a>
-    <a href = "{% url 'resume' %}">Resume Page</a>
-    <a href = "{% url 'poll_index' %}">Polls Page</a>
+
+  <ul class="navigation">
+
+    <li><a href = "{% url 'index' %}">Home Page</a></li>
+    <li><a href = "{% url 'resume' %}">Resume Page</a></li>
+    <li><a href = "{% url 'poll_index' %}">Polls Page</a></li>
+     
+  </ul>
+    
   </div>
   <div>
     <h1 id="header">Home Page</h1>
