Added content to home site and resume site, still unfinished.

--- a/mysite/resume/templates/home.html
+++ b/mysite/resume/templates/home.html
@@ -3,7 +3,9 @@
 <!DOCTYPE html>
 
 <head>
+  <div class = "title">
   <title>Home Page</title>
+</div>
   <link rel="stylesheet" href="{% static 'resume/home.css' %}"
 </head>
 
@@ -22,6 +24,13 @@
   <div>
     <h1 id="header">Home Page</h1>
   </div>
+
+<p>Welcome to my website! I built this website all by myself using Django. It's not still finished yet, but I've been working on it 
+  for a month or two by now. I still haven't decided on the "point" of this website, so for now there might be a mixture of professional stuff
+  (like my resume) and some fun lists (maybe I'll rank all the Smash Bros. characters? Who knows?) 
+</p>
+
+
 
   <script src="{% static 'resume/home.js' %}"></script>
 </body>
