--- a/mysite/resume/templates/resume.html
+++ b/mysite/resume/templates/resume.html
@@ -21,6 +21,58 @@
     <h1 id="header">Resume Page</h1>
   </div>
 
+  Alright, so not to brag here but here of some of my acheivements:
+
+  Technical Skills
+  <ul>
+
+    <li>Python</li>
+    <li>Javascript</li>
+    <li>Java</li>
+    <li>Labview</li>
+  </ul>
+
+Nontechnical Skills
+
+<ul>
+    <li>I know two languages other than English, French and Hindi</li>
+    
+</ul>
+
+<b>Education</b>
+
+<p>I currently attend Highland High School, where I am a senior. Some of my relevant scores include:</p>
+
+<ul>
+
+    <li>A 5 on AP Computer Science Principles.</li>
+    <li>A 5 on AP Calculus AB</li>
+    <li>A 5 on AP Statistics</li>
+    <li>A 4 on AP Computer Science A (it was a self study)</li>
+</ul>
+
+<b>Extracurriculars</b>
+
+<ul>
+<li>Speech and Debate (state qualifier)</li>
+    <li>Cross Country</li>
+    <li>Robotics (top 8 in the region)</li>
+    <li>NHS</li>
+    <li>SADD</li>
+    <li>Junior Leadership of Medina County</li>
+    <li>Outside of school, I do hackathons.</li>
+    
+</ul>
+
+Interested in my projects? Check out my Devpost <a href = "https://devpost.com/nandinimp?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">here</a>. 
+
+
+</body>
+
+
+
+
+
   <script src="{% static 'resume/home.js' %}"></script>
 </body>
 
