--- a/mysite/resume/static/resume/home.css
+++ b/mysite/resume/static/resume/home.css
@@ -8,6 +8,10 @@
     background: deepskyblue;
 }
 
+.title {
+    justify-content: center;
+}
+
 .navigation a {
     text-decoration: none;
     display: block;
@@ -45,3 +49,5 @@
         border-bottom: none;
       }
   }
+
+  
