Changed colors, added stuff

--- a/mysite/resume/templates/home.html
+++ b/mysite/resume/templates/home.html
@@ -30,6 +30,8 @@
   (like my resume) and some fun lists (maybe I'll rank all the Smash Bros. characters? Who knows?) 
 </p>
 
+<div class = "confetti"></div>
+
 
 
   <script src="{% static 'resume/home.js' %}"></script>
