--- a/mysite/resume/static/resume/resume.css
+++ b/mysite/resume/static/resume/resume.css
@@ -5,7 +5,7 @@
 
     list-style: none;
     margin: 0; 
-    background: deepskyblue;
+    background: #CB8DFF;
 }
 
 .navigation a {
@@ -16,7 +16,7 @@
   }
   
   .navigation a:hover {
-    background: #1565C0;
+    background: #B25EF8;
   }
 
 @media all and (max-width: 800px) {
