Attempted to add a confeti effect, added a welcome image, and added text.

--- a/mysite/resume/static/resume/home.css
+++ b/mysite/resume/static/resume/home.css
@@ -50,4 +50,12 @@
       }
   }
 
-  
+.box {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
+  list-style: none;
+  margin: 0; 
+
+}
