--- a/mysite/resume/templates/resume.html
+++ b/mysite/resume/templates/resume.html
@@ -23,7 +23,7 @@
 
   Alright, so not to brag here but here of some of my acheivements:
 
-  Technical Skills
+  <p><b>Technical Skills</b></p>
   <ul>
 
     <li>Python</li>
@@ -32,7 +32,7 @@
     <li>Labview</li>
   </ul>
 
-Nontechnical Skills
+<b>Nontechnical Skills</b>
 
 <ul>
     <li>I know two languages other than English, French and Hindi</li>
@@ -41,7 +41,7 @@ Nontechnical Skills
 
 <b>Education</b>
 
-<p>I currently attend Highland High School, where I am a senior. Some of my relevant scores include:</p>
+<p>I currently attend Highland High School, where I am a senior. Some of my relevant scores and coursework include:</p>
 
 <ul>
 
@@ -65,7 +65,7 @@ Nontechnical Skills
 </ul>
 
 Interested in my projects? Check out my Devpost <a href = "https://devpost.com/nandinimp?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">here</a>. 
-
+<p>Want to see how I made this project? Check out the code for this website <a href = "https://github.com/pandenandini88/Summer-Project">here</a>. </p>
 
 </body>
 
