Added some polish, cheanged some sizes and text.

--- a/mysite/resume/templates/home.html
+++ b/mysite/resume/templates/home.html
@@ -19,9 +19,10 @@
   </ul>
     
   </div>
-  <div>
-    <h1 id="header" class="title">High School Programmer</h1>
-    <h2>Hi! I am Nandini Pande, a high school developer planning to study computer science. I have experience creating a variety of different projects.</h2>
+
+  <div class="menu-container">
+    <h1 id="header" class="center">Nandini Pande</h1>
+    <h3>Hi! I am a high school developer planning to study computer science. I have experience creating a variety of different projects. Feel free to check them out!</h3>
   </div>
 
 
@@ -37,7 +38,7 @@
 
 
 <script src="{% static 'resume/home.js' %}"></script>
-<script src="{% static 'resume/home.js' %}"></script>
+<script src="{% static 'resume/confetti.js' %}"></script>
   <script>
     const start = () => {
       setTimeout(function(){
