--- a/mysite/resume/templates/resume.html
+++ b/mysite/resume/templates/resume.html
@@ -51,6 +51,8 @@
     <li>A 4 on AP Computer Science A (it was a self study)</li>
 </ul>
 
+<p>I also have a weighted GPA of around 4.5</p>
+
 <b>Extracurriculars</b>
 
 <ul>
