--- a/mysite/resume/static/resume/home.css
+++ b/mysite/resume/static/resume/home.css
@@ -8,11 +8,6 @@
     background: #CB8DFF;
 }
 
-.title {
-    display: flex;
-    justify-content: center;
-}
-
 .navigation a {
     text-decoration: none;
     display: block;
@@ -50,6 +45,13 @@
         border-bottom: none;
       }
   }
+
+
+.center {
+    display: flex;
+    justify-content: center;
+  }
+
 
 .box {
   display: flex;
