Fixes for problems

--- a/mysite/resume/static/resume/home.css
+++ b/mysite/resume/static/resume/home.css
@@ -50,6 +50,9 @@
 .center {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
   }
 
 
