--- a/mysite/resume/templates/home.html
+++ b/mysite/resume/templates/home.html
@@ -20,13 +20,16 @@
   </div>
 
   <!-- Adds the title to top of the page, the id allows it to change colors, and the class allows it to be centered -->
-  
-  <h1 id="header" class="center">Nandini Pande</h1>
-  <h3 class="center">Hi! I am a high school developer planning to study computer science. I have experience creating a variety of different projects. Feel free to check them out!</h3>
-  
+  <div class="center">
+  <h1 id="header">Nandini Pande</h1>
+  <h3>Hi! I am a high school developer planning to study computer science. I have experience creating a variety of different projects. Feel free to check them out!</h3>
+</div> 
+
 <!-- Implements home page image, and sets proper size -->
 
-<img class="center" src="{% static 'resume/finalwel (2).jpg' %}" alt="Welcome!" width="900" height="500">
+<div class="center">
+<img src="{% static 'resume/finalwel (2).jpg' %}" alt="Welcome!" width="900" height="500">
+</div>
 
 <!-- Text under the welcome page. -->
 <p class="center">Welcome to my website! I built this website all by myself using Django. It's not still finished yet, but I've been working on it 
@@ -40,24 +43,7 @@
 
 <!-- Links code that allows the confetti falling animation to play. -->
 <script src="{% static 'resume/confetti.js' %}"></script>
-  <script>
-    //starts confetti
-    const start = () => {
-      setTimeout(function(){
-        confetti.start();
-      }, 1000); //indicates time, so 1 second
-    };
-
-    //stops confetti
-    const stop = () => {
-      setTimeout(function(){
-        confetti.stop()
-      }, 5000) //indicates time, so 5 seconds
-    }
-
-    start();
-    stop();
-  </script>
+ 
 </body>
 
 </html>
