--- a/mysite/resume/templates/resume.html
+++ b/mysite/resume/templates/resume.html
@@ -20,7 +20,7 @@
   
 <!-- Adds title to top of page, id makes it change color, class makes it centered -->
     
-  <h1 id="header" class="center">Resume Page</h1>
+  <h1 id="header" class="center">My Resume</h1>
   
 
 <!-- Body text -->
